# VSTSID

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build32.bat  build_au.sh  setup.sh
audio-unit/: CMakeLists.txt  Info.plist  audiounitconfig.h
mac/: Info.plist  PkgInfo
mac/audio-unit/: CMakeLists.txt  audiounitconfig.h
mac/audio-unit/resource/: Info.plist
resource/: plugin.rc  plugin.uidesc  vstsid.uidesc
resource/src/: plugin_design.psd
resources/: again.rc  again.vstxml  plugin.rc  plugin.vstxml  vstplug.def  vstsid.rc  vstsid.vstxml
resources/graphics/: vstsid.rc  vstsid.uidesc  vstsid.xml
resources/graphics/src/: plugin_design.psd
src/: again.cpp  again.h  againmain.cpp  calc.h  filter.cpp  filter.h  filter.tcc  global.h  lfo.cpp  lfo.h  main_vst2.cpp  main_vst3.cpp  miditable.h  paramids.h  process.h  ringmod.cpp  ringmod.h  ringmod.tcc  sid.cpp  sid.h  synth.cpp  synth.h  synth.tcc  synthesizer.cpp  synthesizer.h  util.h  version.h  vst.cpp  vst.h  vstentry.cpp  vstentry_vst2.cpp  vstmain.cpp
src/ui/: controller.cpp  controller.h  uimessagecontroller.h
